2003-01-29  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, oomatic-configure.in: Improved sorting of
	  options, make PPD parser sort the options when the PPD file is
	  non-Foomatic, Automatically fill in longnames/translations which
	  are missing in the PPD file, fixed stripping of "dossy" line
	  ends in PPD files, foomatic-configure can now also generate a
	  Perl data structure when a PPD file and not a Foomatic
	  printer/driver combo is specified on the command line, the Perl
	  output which foomatic-configure generates for Foomatic
	  printer/driver combos contains the composite options now.
	
2003-01-28  Till Kamppeter <till.kamppeter@gmx.net>

	* COPYING: Added file containing the GPL.

	* lib/Foomatic/DB.pm: When parsing the PPD file with the
	  "ppdtoperl()" fonts, "ImageableArea", "PaperDimension", ...  do
	  not entwr as options in the Perl data structure any more. In
	  addition, the parser puts also information about option groups
	  into the structure.

	* foomatic-configure.in: Made foomatic-configure handle
	  "usb://<make>/<model>" URIs correctly.
	
2003-01-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in, lib/Foomatic/DB.pm, configure.in,
	  Makefile.in, makeDefaults.in, USAGE: Added support for
	  compressed PPD files ("file.ppd.gz") supplied with the "--ppd"
	  option of foomatic-configure.

	* lib/Foomatic/DB.pm: For Foomatic PPDs let 'make' and 'model'
	  fields be put into the Perl data structure generated by
	  ppdtoperl().
	
2003-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Made URIs for printer connections ("-c"
	  option) absolutely compatible to CUPS (Now one can use
	  "parallel:...", "usb:...", and "serial:..."). Automatic
	  conversion of USB URIs to URIs referring to manufacturer, model,
	  and serial number of the printer under CUPS 1.1.17 or newer.
	  Support for the MTink daemon from http://xwtools.automatix.de/.
	